--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "chokidar": "^3.5.2",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "framer-motion": "^4.1.17",
